--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ cache: packages
 before_install:
   - sudo apt-get --yes --force-yes update -qq
   - sudo apt-get install --yes cmake make gcc libtool
-  - git clone https://github.com/uber/h3.git
-  - pushd h3
+  - git clone https://github.com/uber/h3.git h3c
+  - pushd h3c
   - cmake -DENABLE_FORMAT=OFF -DBUILD_SHARED_LIBS=ON .
   - sudo make install
   - popd
+  - rm -rf h3c
