--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ before_install:
   - popd
   - rm -rf h3c
   - ls /usr/local/lib/
-  - sudo update_dyld_shared_cache
+  - sudo install_name_tool -id "@rpath/libh3.dylib" libh3.dylib
+  # - sudo update_dyld_shared_cache
