--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,14 @@
 
 S3method(geo_boundary_to_sf,list)
 S3method(geo_boundary_to_sf,matrix)
+S3method(geo_to_h3,matrix)
+S3method(geo_to_h3,numeric)
+export("%>%")
 export(geo_boundary_to_sf)
 export(geo_to_h3)
 export(h3_to_geo_boundary_sf)
 export(num_hexagons)
 export(rcpp_h3_to_geo_boundary)
 importFrom(Rcpp,sourceCpp)
+importFrom(magrittr,"%>%")
 useDynLib(h3, .registration = TRUE)
