Add 'geo_to_h3' S3 method for 'sf' objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(geo_boundary_to_sf,list)
 S3method(geo_boundary_to_sf,matrix)
 S3method(geo_to_h3,matrix)
 S3method(geo_to_h3,numeric)
+S3method(geo_to_h3,sf)
 export("%>%")
 export(geo_boundary_to_sf)
 export(geo_to_h3)
