--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(geo_boundary_to_sf,list)
 S3method(geo_boundary_to_sf,matrix)
+S3method(geo_to_h3,data.frame)
 S3method(geo_to_h3,matrix)
 S3method(geo_to_h3,numeric)
 S3method(geo_to_h3,sf)
