Add missing r-docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,9 @@ S3method(geo_to_h3,sf)
 export("%>%")
 export(geo_boundary_to_sf)
 export(geo_to_h3)
+export(h3_to_geo_boundary)
 export(h3_to_geo_boundary_sf)
 export(num_hexagons)
-export(rcpp_h3_to_geo_boundary)
 importFrom(Rcpp,sourceCpp)
 importFrom(magrittr,"%>%")
 useDynLib(h3, .registration = TRUE)
