--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ sudo: true
 latex: false
 cache: packages
 
+env:
+  - H3_VERSION="v3.3.0"
+
 matrix:
   include:
     - os: linux
@@ -17,6 +20,8 @@ r_binary_packages:
 before_install:
   - git clone https://github.com/uber/h3.git h3c
   - pushd h3c
+  - git pull origin master --tags
+  - git checkout "$H3_VERSION"
   - cmake -DENABLE_FORMAT=OFF -DBUILD_SHARED_LIBS=ON .
   - sudo make install
   - popd
