--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(geo_to_h3,sf)
 export("%>%")
 export(geo_boundary_to_sf)
 export(geo_to_h3)
+export(h3_to_geo)
 export(h3_to_geo_boundary)
 export(h3_to_geo_boundary_sf)
 export(num_hexagons)
