--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,15 @@ S3method(geo_to_h3,data.frame)
 S3method(geo_to_h3,matrix)
 S3method(geo_to_h3,numeric)
 S3method(geo_to_h3,sf)
+S3method(geo_to_sf,matrix)
 export("%>%")
 export(geo_boundary_to_sf)
 export(geo_to_h3)
+export(geo_to_sf)
 export(h3_to_geo)
 export(h3_to_geo_boundary)
 export(h3_to_geo_boundary_sf)
+export(h3_to_geo_sf)
 export(num_hexagons)
 importFrom(Rcpp,sourceCpp)
 importFrom(magrittr,"%>%")
