--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(h3_to_geo_boundary)
 export(h3_to_geo_boundary_sf)
 export(h3_to_geo_sf)
 export(num_hexagons)
+export(rcpp_k_ring)
 importFrom(Rcpp,sourceCpp)
 importFrom(magrittr,"%>%")
 useDynLib(h3, .registration = TRUE)
