--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,8 @@ export(h3_to_geo)
 export(h3_to_geo_boundary)
 export(h3_to_geo_boundary_sf)
 export(h3_to_geo_sf)
+export(k_ring)
 export(num_hexagons)
-export(rcpp_k_ring)
 importFrom(Rcpp,sourceCpp)
 importFrom(magrittr,"%>%")
 useDynLib(h3, .registration = TRUE)
