--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,8 @@ Authors@R: person("Stefan","Kuethe", role = c("aut", "cre"), email = "crazycapiv
 Maintainer: Stefan Kuethe <crazycapivara@gmail.com>
 Description: Provides R bindings for H3 <https://uber.github.io/h3/>,
   a hexagonal hierarchical spatial indexing system.
+URL: https://github.com/crazycapivara/h3-r
+BugReports: https://github.com/crazycapivara/h3-r/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
