--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export("%>%")
 export(geo_boundary_to_sf)
 export(geo_to_h3)
 export(geo_to_sf)
+export(h3_distance)
 export(h3_to_geo)
 export(h3_to_geo_boundary)
 export(h3_to_geo_boundary_sf)
