--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(geo_boundary_to_sf)
 export(geo_to_h3)
 export(geo_to_sf)
 export(h3_distance)
+export(h3_set_to_multi_polygon)
 export(h3_to_geo)
 export(h3_to_geo_boundary)
 export(h3_to_geo_boundary_sf)
