--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(h3_to_geo_boundary)
 export(h3_to_geo_boundary_sf)
 export(h3_to_geo_sf)
 export(k_ring)
+export(k_ring_distances)
 export(num_hexagons)
 importFrom(Rcpp,sourceCpp)
 importFrom(magrittr,"%>%")
