--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(h3_to_geo)
 export(h3_to_geo_boundary)
 export(h3_to_geo_boundary_sf)
 export(h3_to_geo_sf)
+export(hex_area)
 export(k_ring)
 export(k_ring_distances)
 export(num_hexagons)
