--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,10 +13,12 @@ export(geo_to_h3)
 export(geo_to_sf)
 export(h3_distance)
 export(h3_set_to_multi_polygon)
+export(h3_to_children)
 export(h3_to_geo)
 export(h3_to_geo_boundary)
 export(h3_to_geo_boundary_sf)
 export(h3_to_geo_sf)
+export(h3_to_parent)
 export(hex_area)
 export(k_ring)
 export(k_ring_distances)
