--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(geo_to_sf)
 export(h3_distance)
 export(h3_get_base_cell)
 export(h3_get_resolution)
+export(h3_indexes_are_neighbors)
 export(h3_is_valid)
 export(h3_set_to_multi_polygon)
 export(h3_to_children)
