--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(edge_length)
 export(geo_boundary_to_sf)
 export(geo_to_h3)
 export(geo_to_sf)
+export(get_h3_undirectional_edge)
 export(h3_distance)
 export(h3_get_base_cell)
 export(h3_get_resolution)
