--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(h3_to_geo_boundary)
 export(h3_to_geo_boundary_sf)
 export(h3_to_geo_sf)
 export(h3_to_parent)
+export(h3_unidirectional_edge_is_valid)
 export(hex_area)
 export(k_ring)
 export(k_ring_distances)
