--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(geo_boundary_to_sf)
 export(geo_to_h3)
 export(geo_to_sf)
 export(get_h3_unidirectional_edge)
+export(get_h3_unidirectional_edge_boundary)
 export(h3_distance)
 export(h3_get_base_cell)
 export(h3_get_resolution)
