--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(geo_to_h3,sf)
 S3method(geo_to_sf,matrix)
 export("%>%")
 export(compact)
+export(edge_boundary_to_sf)
 export(edge_length)
 export(geo_boundary_to_sf)
 export(geo_to_h3)
