--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(geo_to_h3)
 export(geo_to_sf)
 export(get_h3_unidirectional_edge)
 export(get_h3_unidirectional_edge_boundary)
+export(get_h3_unidirectional_edges_from_hexagon)
 export(h3_distance)
 export(h3_get_base_cell)
 export(h3_get_resolution)
