--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(get_h3_unidirectional_edge)
 export(get_h3_unidirectional_edge_boundary)
 export(get_h3_unidirectional_edge_boundary_sf)
 export(get_h3_unidirectional_edges_from_hexagon)
+export(get_origin_h3_index_from_unidirectional_edge)
 export(h3_distance)
 export(h3_get_base_cell)
 export(h3_get_resolution)
