--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(edge_length)
 export(geo_boundary_to_sf)
 export(geo_to_h3)
 export(geo_to_sf)
+export(get_destination_h3_index_from_unidirectional_edge)
 export(get_h3_unidirectional_edge)
 export(get_h3_unidirectional_edge_boundary)
 export(get_h3_unidirectional_edge_boundary_sf)
