--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(h3_indexes_are_neighbors)
 export(h3_is_pentagon)
 export(h3_is_res_class_iii)
 export(h3_is_valid)
+export(h3_line)
 export(h3_set_to_multi_polygon)
 export(h3_to_children)
 export(h3_to_geo)
