Add polyfill binding

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(hex_ring)
 export(k_ring)
 export(k_ring_distances)
 export(num_hexagons)
+export(polyfill)
 importFrom(Rcpp,sourceCpp)
 importFrom(magrittr,"%>%")
 useDynLib(h3, .registration = TRUE)
