Support 'sfc' and 'sf' objects in 'polyfill' func

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ S3method(geo_to_h3,matrix)
 S3method(geo_to_h3,numeric)
 S3method(geo_to_h3,sf)
 S3method(geo_to_sf,matrix)
+S3method(polyfill,matrix)
+S3method(polyfill,sf)
+S3method(polyfill,sfc)
 export("%>%")
 export(compact)
 export(edge_boundary_to_sf)
