--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,8 @@ S3method(geo_to_h3,sf)
 S3method(geo_to_sf,matrix)
 S3method(polyfill,matrix)
 S3method(polyfill,sf)
-S3method(polyfill,sfc)
+S3method(polyfill,sfc_MULTIPOLYGON)
+S3method(polyfill,sfc_POLYGON)
 export("%>%")
 export(compact)
 export(edge_boundary_to_sf)
