--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: Provides R bindings for H3 <https://h3geo.org/>,
   a hexagonal hierarchical spatial indexing system.
 URL: https://github.com/crazycapivara/h3-r
 BugReports: https://github.com/crazycapivara/h3-r/issues
-License: MIT + file LICENSE
+License: Apache License (>= 2)
 Encoding: UTF-8
 LazyData: true
 LinkingTo:
